envoy/hcm-request-timeout/envoy.yaml
static_resources:
  listeners:
    - name: listener_http_proxy
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9080
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: localgw
                common_http_protocol_options:
                  max_stream_duration: 3600s
                http2_protocol_options:
                  allow_connect: true
                upgrade_configs:
                  upgrade_type: "CONNECT"
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend2
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: "remote_http_cluster"
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                requestTimeout: 0.1s
      listenerFiltersTimeout: 100s
      continueOnListenerFiltersTimeout: true
  clusters:
    - name: remote_http_cluster
      connect_timeout: 1s
      type: strict_dns
      lb_policy: round_robin
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          common_http_protocol_options:
            max_stream_duration: "0.5s"
          explicit_http_config:
            http_protocol_options: {}
      load_assignment:
        cluster_name: remote_http_cluster
        endpoints:
          lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 8080
      dns_refresh_rate: 60s
layeredRuntime:
  layers:
    - name: globalconfig
      staticLayer:
        overload.global_downstream_max_connections: 2147483647
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 15000
